<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2016-2022 Hedera Hashgraph, LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<!-- Required Maven Version -->
	<modelVersion>4.0.0</modelVersion>

	<!-- Parent Configuration -->
	<parent>
		<groupId>com.swirlds</groupId>
		<artifactId>swirlds-unit-tests</artifactId>
		<version>0.30.1-orvw.1</version>
		<relativePath>../../pom.xml</relativePath>
	</parent>

	<!-- Project Configuration -->
	<artifactId>swirlds-common-test</artifactId>
	<packaging>jar</packaging>

	<!-- Project Properties -->
	<properties>
		<!-- Maven and Java Configuration -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<maven.javadoc.skip>true</maven.javadoc.skip>
		<maven.deploy.skip>false</maven.deploy.skip>

		<sdk.dir>${project.basedir}/../../../sdk</sdk.dir>

		<sonar.coverage.jacoco.xmlReportPaths>
			${sonar.jacoco.path},${sonar.jacoco.alt.path}
		</sonar.coverage.jacoco.xmlReportPaths>
	</properties>

	<!-- Dependencies -->
	<dependencies>
		<!-- Swirlds -->
		<dependency>
			<groupId>com.swirlds</groupId>
			<artifactId>swirlds-test-framework</artifactId>
			<version>0.30.1-orvw.1</version>
		</dependency>

		<!-- JUnit 5.x -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.23.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<!-- Profiles -->
	<profiles>
		<!-- Automatic Profile (not for manual use) -->
		<profile>
			<id>default-variable-maven-opts</id>
			<activation>
				<property>
					<name>!env.MAVEN_OPTS</name>
				</property>
			</activation>
			<properties>
				<env.MAVEN_OPTS/>
			</properties>
		</profile>

		<!-- Automatic Profile (not for manual use) -->
		<profile>
			<id>default-variable-argLine</id>
			<activation>
				<property>
					<name>!argLine</name>
				</property>
			</activation>
			<properties>
				<argLine/>
			</properties>
		</profile>

		<profile>
			<id>release-sonatype</id>
			<activation>
				<property>
					<name>env.RELEASE</name>
					<value>sonatype</value>
				</property>
			</activation>
			<properties>
				<maven.javadoc.skip>false</maven.javadoc.skip>
			</properties>
		</profile>
	</profiles>

	<!-- Build Configuration -->
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>@{argLine} ${env.MAVEN_OPTS}
						--add-opens com.swirlds.common/com.swirlds.common.constructable=ALL-UNNAMED
						--add-opens com.swirlds.common/com.swirlds.common.io=ALL-UNNAMED
						--add-opens com.swirlds.common/com.swirlds.common.crypto=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.constructable=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.locks=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.threading=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.settings=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.constructable=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.transactions=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.merkle=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.merkle.dummy=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.set=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.crypto=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.io=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.io.extendable=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.utility=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.notification=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.threading.wrappers=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.throttle=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.signingTool=ALL-UNNAMED
						--add-opens com.swirlds.common.test/com.swirlds.common.test.stream=ALL-UNNAMED
					</argLine>
					<forkCount>1</forkCount>
					<reuseForks>true</reuseForks>
					<useSystemClassLoader>true</useSystemClassLoader>
					<excludes>
						<exclude>**/MerkleHashBenchmarks.java</exclude>
						<exclude>**/StreamObjectTest.java</exclude>
						<exclude>**/MerkleMapBenchmark.java</exclude>
						<exclude>**/CryptographyBenchmarkTests.java</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
